--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
-DB_HOST=0.0.0.0
-DB_NAME=sports_courses
-DB_PORT=5432
-DB_USER=postgres
-DB_PASS=1
+export DB_HOST="0.0.0.0"
+export DB_NAME="sports_courses"
+export DB_PORT="5432"
+export DB_USER="postgres"
+export DB_PASS="1"
+export REDIS_PORT="6379"
+export REDIS_HOST="0.0.0.0"
+export REDIS_USER="admin1"
+export REDIS_PASSWORD=""
