--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ export DB_PORT="5432"
 export DB_USER="postgres"
 export DB_PASS="1"
 export REDIS_PORT="6379"
-export REDIS_HOST="0.0.0.0"
-export REDIS_USER="admin1"
+export REDIS_HOST="127.0.0.1"
+export REDIS_USER="default"
 export REDIS_PASSWORD=""
